Azure-China-templates/templates/marketplace-mds/mainTemplate.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "metadata": {
        "description": "Deployment location"
      },
      "defaultValue": "[resourceGroup().location]"
    },
    "cloudGuardVersion": {
      "type": "string",
      "allowedValues": [
        "R80.40 - Bring Your Own License",
        "R81 - Bring Your Own License",
        "R81.10 - Bring Your Own License",
        "R81.20 - Bring Your Own License"
      ],
      "defaultValue": "R81.10 - Bring Your Own License",
      "metadata": {
        "description": "Version of Check Point CloudGuard"
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Administrator password"
      },
      "defaultValue": ""
    },
    "authenticationType": {
      "type": "string",
      "allowedValues": [
        "password",
        "sshPublicKey"
      ],
      "defaultValue": "password",
      "metadata": {
        "description": "Authentication type"
      }
    },
    "sshPublicKey": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Administrator SSH public key"
      }
    },
    "vmName": {
      "type": "string",
      "metadata": {
        "description": "The name of the Check Point Multi-Domain Server."
      }
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_DS5_v2",
      "metadata": {
        "description": "Size of the VM"
      }
    },
    "adminShell": {
      "type": "string",
      "defaultValue": "/etc/cli.sh",
      "allowedValues": [
        "/etc/cli.sh",
        "/bin/bash",
        "/bin/csh",
        "/bin/tcsh"
      ],
      "metadata": {
        "Description": "The default shell for the admin user"
      }
    },
    "virtualNetworkName": {
      "type": "string",
      "metadata": {
        "description": "The name of the virtual network"
      },
      "defaultValue": "vnet01"
    },
    "virtualNetworkAddressPrefix": {
      "type": "string",
      "metadata": {
        "description": "The address prefix of the virtual network"
      },
      "defaultValue": "10.0.0.0/16"
    },
    "Subnet1Name": {
      "type": "string",
      "metadata": {
        "description": "The name of the subnet"
      },
      "defaultValue": "Multi-Domain-Server"
    },
    "Subnet1Prefix": {
      "type": "string",
      "metadata": {
        "description": "The address prefix of the subnet"
      },
      "defaultValue": "10.0.1.0/24"
    },
    "Subnet1StartAddress": {
      "type": "string",
      "metadata": {
        "description": "The first available address on the subnet"
      },
      "defaultValue": "10.0.1.10"
    },
    "vnetNewOrExisting": {
      "type": "string",
      "defaultValue": "new",
      "allowedValues": [
        "new",
        "existing"
      ],
      "metadata": {
        "Description": "Indicates whether the virtual network is new or existing"
      }
    },
    "virtualNetworkExistingRGName": {
      "type": "string",
      "metadata": {
        "description": "Resource Group of the existing virtual network"
      },
      "defaultValue": "[resourceGroup().name]"
    },
    "managementGUIClientNetwork": {
      "type": "string",
      "metadata": {
        "description": "Allowed GUI clients"
      },
      "defaultValue": "0.0.0.0/0"
    },
    "sicKey": {
      "type": "securestring",
      "metadata": {
        "description": "One time key for Secure Internal Communication"
      }
    },
    "installationType": {
      "type": "string",
      "metadata": {
        "description": "Installation Type"
      },
      "defaultValue": "mds-primary",
      "allowedValues": [
        "mds-primary",
        "mds-secondary",
        "mds-logserver"
      ]
    },
    "bootstrapScript": {
      "type": "string",
      "metadata": {
        "description": "Bootstrap script"
      },
      "defaultValue": ""
    },
    "allowDownloadFromUploadToCheckPoint": {
      "type": "string",
      "allowedValues": [
        "true",
        "false"
      ],
      "defaultValue": "true",
      "metadata": {
        "description": "Automatically download Blade Contracts and other important data. Improve product experience by sending data to Check Point"
      }
    },
    "additionalDiskSizeGB": {
      "type": "int",
      "defaultValue": 0,
      "metadata": {
        "description": "Amount of additional disk space (in GB)"
      },
      "minValue": 0,
      "maxValue": 3995
    },
    "diskType": {
      "type": "string",
      "defaultValue": "Standard_LRS",
      "metadata": {
        "description": "The type of the OS disk. Premium is applicable only to DS machine sizes"
      },
      "allowedValues": [
        "Standard_LRS",
        "Premium_LRS"
      ]
    },
    "msi": {
      "type": "bool",
      "defaultValue": false,
      "metadata": {
        "description": "Configure managed service identity for the VM"
      }
    },
    "sourceImageVhdUri": {
      "type": "string",
      "defaultValue": "noCustomUri",
      "metadata": {
        "description": "The URI of the blob containing the development image"
      }
    },
    "_artifactsLocation": {
      "type": "string",
      "metadata": {
        "description": "Use the following URI when deploying a custom template: https://raw.githubusercontent.com/CheckPointSW/CloudGuardIaaS/master/azure/templates/"
      },
      "defaultValue": "[deployment().properties.templateLink.uri]"
    },
    "_artifactsLocationSasToken": {
      "type": "securestring",
      "metadata": {
        "description": "The sasToken required to access _artifactsLocation.  When the template is deployed using the accompanying scripts, a sasToken will be automatically generated. Use the defaultValue if the staging location is not secured."
      },
      "defaultValue": ""
    },
    "tagsByResource": {
      "type": "object",
      "defaultValue": {}
    },
    "deployNewNSG": {
      "type": "bool",
      "defaultValue": true
    },
    "ExistingNSG": {
      "type": "object",
      "defaultValue": {}
    },
    "NewNsgName": {
      "type": "string",
      "defaultValue": "[concat(parameters('vmName'),'-nsg')]"
    }
  },
  "variables": {
    "templateName": "mds",
    "templateVersion": "20230124",
    "location": "[parameters('location')]",
    "offers": {
      "R80.40 - Bring Your Own License": "BYOL",
      "R81 - Bring Your Own License": "BYOL",
      "R81.10 - Bring Your Own License": "BYOL",
      "R81.20 - Bring Your Own License": "BYOL"
    },
    "offer": "[variables('offers')[parameters('cloudGuardVersion')]]",
    "osVersions": {
      "R80.40 - Bring Your Own License": "R8040",
      "R81 - Bring Your Own License": "R81",
      "R81.10 - Bring Your Own License": "R8110",
      "R81.20 - Bring Your Own License": "R8120"
    },
    "osVersion": "[variables('osVersions')[parameters('cloudGuardVersion')]]",
    "isBlink": "[bool('false')]",
    "primary": "[equals(parameters('installationType'), 'mds-primary')]",
    "secondary": "[equals(parameters('installationType'), 'mds-secondary')]",
    "logserver": "[equals(parameters('installationType'), 'mds-logserver')]",
    "storageAccountName": "[concat('bootdiag', uniqueString(resourceGroup().id, deployment().name))]",
    "storageAccountType": "Standard_LRS",
    "diskSize100GB": 100,
    "diskSizeGB": "[add(parameters('additionalDiskSizeGB'), variables('diskSize100GB'))]",
    "customData": "[concat('#!/usr/bin/python3 /etc/cloud_config.py\n', '\n', 'installationType=\"', parameters('installationType'), '\"', '\n', 'allowUploadDownload=\"', variables('allowUploadDownload'), '\"', '\n', 'osVersion=\"', variables('osVersion'), '\"', '\n', 'templateName=\"', variables('templateName'), '\"', '\n', 'isBlink=\"', variables('isBlink'), '\"', '\n', 'templateVersion=\"', variables('templateVersion'), '\"', '\n', 'bootstrapScript64=\"', variables('bootstrapScript64'), '\"', [...]
    "customData64": "[base64(variables('customData'))]",
    "imageOffer": "[concat('check-point-cg-', toLower(variables('osVersion')))]",
    "imagePublisher": "sinoage",
    "imageReferenceBYOL": {
      "offer": "[variables('imageOffer')]",
      "publisher": "[variables('imagePublisher')]",
      "sku": "mgmt-byol",
      "version": "latest"
    },
    "imageReferenceMarketplace": "[variables('imageReferenceBYOL')]",
    "customImage": "customImage",
    "imageReferenceCustomUri": {
      "id": "[resourceId('Microsoft.Compute/images/', variables('customImage'))]"
    },
    "imageReference": "[if(equals(parameters('sourceImageVhdUri'),'noCustomUri'), variables('imageReferenceMarketplace'), variables('imageReferenceCustomUri'))]",
    "nic1Name": "[concat(parameters('vmName'), '-eth0')]",
    "linuxConfigurationpassword": {
      "disablePasswordAuthentication": "false"
    },
    "linuxConfigurationsshPublicKey": {
      "disablePasswordAuthentication": "true",
      "ssh": {
        "publicKeys": [
          {
            "keyData": "[parameters('sshPublicKey')]",
            "path": "/home/notused/.ssh/authorized_keys"
          }
        ]
      }
    },
    "linuxConfiguration": "[if(equals(parameters('authenticationType'), 'password'),  variables('linuxConfigurationpassword'), variables('linuxConfigurationsshPublicKey'))]",
    "planBYOL": {
      "name": "mgmt-byol",
      "product": "[variables('imageOffer')]",
      "publisher": "[variables('imagePublisher')]"
    },
    "plan": "[if(equals(variables('offer'), 'BYOL'), variables('planBYOL'), variables('planBYOL'))]",
    "identity": "[if(parameters('msi'), json('{\"type\": \"SystemAssigned\"}'), json('null'))]",
    "publicIPAddressName": "[parameters('vmName')]",
    "publicIPAddressId": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]",
    "bootstrapScript64": "[base64(parameters('bootstrapScript'))]",
    "allowUploadDownload": "[parameters('allowDownloadFromUploadToCheckPoint')]",
    "networkSetupURL": "[uri(parameters('_artifactsLocation'), concat('nestedtemplates/vnet-1-subnet-', parameters('vnetNewOrExisting'), '.json', parameters('_artifactsLocationSasToken')))]",
    "managementGUIClientNetwork": "[parameters('managementGUIClientNetwork')]",
    "deployNewVnet": "[equals(parameters('vnetNewOrExisting'), 'new')]",
    "vnetRGName": "[if(variables('deployNewVnet'), resourceGroup().name, parameters('virtualNetworkExistingRGName'))]",
    "NewNsgReference": {
      "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NewNsgName'))]"
    }
  },
  "resources": [
    {
      "apiVersion": "2020-06-01",
      "name": "pid-6f13b00a-7546-4ab2-be9f-c66815cc6c8b-partnercenter",
      "type": "Microsoft.Resources/deployments",
      "properties": {
        "mode": "Incremental",
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "resources": []
        }
      }
    },
    {
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('storageAccountName')]",
      "apiVersion": "2022-09-01",
      "properties": {
        "supportsHttpsTrafficOnly": true,
        "allowBlobPublicAccess": false,
        "minimumTlsVersion": "TLS1_2"
      },
      "location": "[variables('location')]",
      "sku": {
        "name": "[variables('storageAccountType')]"
      },
      "kind": "Storage",
      "tags": "[ if(contains(parameters('tagsByResource'), 'Microsoft.Storage/storageAccounts'), parameters('tagsByResource')['Microsoft.Storage/storageAccounts'], json('{}')) ]"
    },
    {
      "condition": "[equals(parameters('vnetNewOrExisting'), 'new')]",
      "name": "networkNewSetup",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2020-06-01",
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('networkSetupURL')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "location": {
            "value": "[variables('location')]"
          },
          "virtualNetworkName": {
            "value": "[parameters('virtualNetworkName')]"
          },
          "virtualNetworkAddressPrefix": {
            "value": "[parameters('virtualNetworkAddressPrefix')]"
          },
          "Subnet1Name": {
            "value": "[parameters('Subnet1Name')]"
          },
          "Subnet1Prefix": {
            "value": "[parameters('Subnet1Prefix')]"
          },
          "tagsByResource": {
            "value": "[parameters('tagsByResource')]"
          },
          "deployNsg": {
            "value": false
          },
          "NewNsgName": {
            "value": "[parameters('NewNsgName')]"
          }
        }
      }
    },
    {
      "condition": "[equals(parameters('vnetNewOrExisting'), 'existing')]",
      "name": "networkExistingSetup",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2020-06-01",
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('networkSetupURL')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "location": {
            "value": "[variables('location')]"
          },
          "virtualNetworkName": {
            "value": "[parameters('virtualNetworkName')]"
          },
          "virtualNetworkExistingRGName": {
            "value": "[variables('vnetRGName')]"
          },
          "vmName": {
            "value": "[parameters('vmName')]"
          },
          "tagsByResource": {
            "value": "[parameters('tagsByResource')]"
          },
          "deployNsg": {
            "value": false
          },
          "NewNsgName": {
            "value": "[parameters('NewNsgName')]"
          }
        }
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-06-01",
      "location": "[variables('location')]",
      "name": "[variables('publicIPAddressName')]",
      "properties": {
        "idleTimeoutInMinutes": 30,
        "publicIPAllocationMethod": "Static",
        "dnsSettings": {
          "domainNameLabel": "[concat(toLower(parameters('vmName')), '-', uniquestring(resourceGroup().id, deployment().name))]"
        }
      },
      "tags": "[ if(contains(parameters('tagsByResource'), 'Microsoft.Network/publicIPAddresses'), parameters('tagsByResource')['Microsoft.Network/publicIPAddresses'], json('{}')) ]"
    },
    {
      "condition": "[parameters('deployNewNSG')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-06-01",
      "location": "[variables('location')]",
      "name": "[parameters('NewNsgName')]",
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
              "description": "Allow inbound SSH connection",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "[variables('managementGUIClientNetwork')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "100",
              "direction": "Inbound"
            }
          },
          {
            "name": "GAiA-portal",
            "properties": {
              "description": "Allow inbound HTTPS access to the GAiA portal",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "[variables('managementGUIClientNetwork')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "110",
              "direction": "Inbound"
            }
          },
          {
            "name": "SmartConsole-1",
            "properties": {
              "description": "Allow inbound access using the SmartConsole GUI client",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "18190",
              "sourceAddressPrefix": "[variables('managementGUIClientNetwork')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "120",
              "direction": "Inbound"
            }
          },
          {
            "name": "SmartConsole-2",
            "properties": {
              "description": "Allow inbound access using the SmartConsole GUI client",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "19009",
              "sourceAddressPrefix": "[variables('managementGUIClientNetwork')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "130",
              "direction": "Inbound"
            }
          },
          {
            "name": "Logs",
            "properties": {
              "description": "Allow inbound logging connections from managed gateways",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "257",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "140",
              "direction": "Inbound"
            }
          },
          {
            "name": "ICA-pull",
            "properties": {
              "description": "Allow security gateways to pull a SIC certificate",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "18210",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "150",
              "direction": "Inbound"
            }
          },
          {
            "name": "CRL-fetch",
            "properties": {
              "description": "Allow security gateways to fetch CRLs",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "18264",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "160",
              "direction": "Inbound"
            }
          },
          {
            "name": "Policy-fetch",
            "properties": {
              "description": "Allow security gateways to fetch policy",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "18191",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "170",
              "direction": "Inbound"
            }
          }
        ]
      },
      "tags": "[ if(contains(parameters('tagsByResource'), 'Microsoft.Network/networkSecurityGroups'), parameters('tagsByResource')['Microsoft.Network/networkSecurityGroups'], json('{}')) ]"
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2020-06-01",
      "dependsOn": [
        "[coalesce(resourceId('Microsoft.Resources/deployments', 'networkNewSetup'), resourceId('Microsoft.Resources/deployments', 'networkExistingSetup'))]",
        "[variables('publicIPAddressId')]"
      ],
      "location": "[variables('location')]",
      "name": "[variables('nic1Name')]",
      "properties": {
        "enableIPForwarding": false,
        "networkSecurityGroup": "[if(parameters('deployNewNSG') , variables('NewNsgReference') , parameters('ExistingNSG'))]",
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAddress": "[parameters('Subnet1StartAddress')]",
              "privateIPAllocationMethod": "Static",
              "PublicIpAddress": {
                "Id": "[variables('publicIPAddressId')]"
              },
              "subnet": {
                "id": "[resourceId(variables('vnetRGName') ,'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('Subnet1Name'))]"
              }
            }
          }
        ]
      },
      "tags": "[ if(contains(parameters('tagsByResource'), 'Microsoft.Network/networkInterfaces'), parameters('tagsByResource')['Microsoft.Network/networkInterfaces'], json('{}')) ]"
    },
    {
      "condition": "[not(equals(parameters('sourceImageVhdUri'), 'noCustomUri'))]",
      "type": "Microsoft.Compute/images",
      "apiVersion": "2020-06-01",
      "name": "[variables('customImage')]",
      "location": "[variables('location')]",
      "properties": {
        "storageProfile": {
          "osDisk": {
            "osType": "Linux",
            "osState": "Generalized",
            "blobUri": "[parameters('sourceImageVhdUri')]",
            "storageAccountType": "Standard_LRS"
          }
        },
        "hyperVGeneration": "V1"
      },
      "tags": "[ if(contains(parameters('tagsByResource'), 'Microsoft.Compute/images'), parameters('tagsByResource')['Microsoft.Compute/images'], json('{}')) ]"
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-07-01",
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('nic1Name'))]",
        "[resourceId('Microsoft.Compute/images/', variables('customImage'))]"
      ],
      "location": "[variables('location')]",
      "name": "[parameters('vmName')]",
      "plan": "[if(equals(parameters('sourceImageVhdUri'),'noCustomUri'), variables('plan'), json('null'))]",
      "identity": "[variables('identity')]",
      "properties": {
        "UserData": "[variables('customData64')]",
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": "true",
            "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', variables('storageAccountName')), '2022-09-01').primaryEndpoints.blob]"
          }
        },
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nic1Name'))]",
              "properties": {
                "primary": true
              }
            }
          ]
        },
        "osProfile": {
          "adminPassword": "[parameters('adminPassword')]",
          "adminUsername": "[concat('not','used')]",
          "computerName": "[toLower(parameters('vmName'))]",
          "customData": "[variables('customData64')]",
          "linuxConfiguration": "[variables('linuxConfiguration')]"
        },
        "storageProfile": {
          "imageReference": "[variables('imageReference')]",
          "osDisk": {
            "caching": "ReadWrite",
            "createOption": "FromImage",
            "diskSizeGB": "[variables('diskSizeGB')]",
            "name": "[parameters('vmName')]",
            "managedDisk": {
              "storageAccountType": "[parameters('diskType')]"
            }
          }
        }
      },
      "tags": "[ if(contains(parameters('tagsByResource'), 'Microsoft.Compute/virtualMachines'), parameters('tagsByResource')['Microsoft.Compute/virtualMachines'], json('{}')) ]"
    }
  ],
  "outputs": {
    "IPAddress": {
      "type": "string",
      "value": "[reference(variables('publicIPAddressId')).IpAddress]"
    },
    "FQDN": {
      "type": "string",
      "value": "[reference(variables('publicIPAddressId')).dnsSettings.fqdn]"
    }
  }
}
